--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
-    "atom-message-panel": "^1.2.7",
+    "atom-space-pen-views": "^2.2.0",
     "h5o": "^0.11.3"
   }
 }
